2010-04-05  Peter Bloomfield

	* src/balsa-index.c (bndx_string_width), (bndx_instance_init),
	(balsa_index_set_column_widths): get column width as actual
	string width.

2010-04-05  Peter Bloomfield

	* libbalsa/misc.c (libbalsa_size_to_gchar): more compact string
	representation of a size.

2010-04-05  Pawel Salek

	* libbalsa/mailbox.c: Mailbox::add_messages would leak a file descriptor
	each time it was called.

2010-03-29  Peter Bloomfield

	* src/balsa-index.c (bndx_instance_init),
	(balsa_index_set_column_widths): set the renderer width for the
	"Size" column instead of the column width--works reliably; fixes
	bug #579479 (Jonathan North Washington).

2010-03-27  Peter Bloomfield

	* src/main-window.c: do not crash on early exit; fixes bug
	#613998 (Ildar).

2010-03-27  Peter Bloomfield

	* configure.in: build with gtkhtml2.

2010-03-27  Peter Bloomfield

	* src/main-window.c: use a single thread to open all mailboxes.

2010-03-27  Peter Bloomfield

	* src/balsa-app.c (open_mailbox_by_url),
	(open_mailboxes_idle_cb): open first mailbox not hidden, open
	the remainder hidden.

2010-03-27  Peter Bloomfield

	* src/balsa-index.c (bndx_destroy): recheck index->mailbox_node
	after dropping the gdk lock.

2010-03-27  Peter Bloomfield

	* libbalsa/mailbox.c (libbalsa_mailbox_close): increase mailbox
	ref count while closing it.

2010-03-23  Peter Bloomfield

	* src/main.c: missing include.

2010-03-23  Peter Bloomfield

	* configure.in: use single-includes.

2010-03-20  Peter Bloomfield

	* libbalsa/html.c (libbalsa_html_get_view_widget): new method to
	get the actual view widget.
	* libbalsa/html.h: ditto.
	* src/balsa-mime-widget-text.c (bm_widget_new_html): connect to
	key-press-event on the actual view widget.

2010-03-11  Peter Bloomfield

	* libbalsa/files.c (libbalsa_icon_finder): allocate string only
	if needed.

2010-03-07  Albrecht Dreß

	* src/balsa-mime-widget-text.c: do not mangle quotation characters
	when copying text.

2010-03-04  Pawel Salek
